--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postcss": "^8.2.14"
   },
   "scripts": {
-    "build": "parcel build --no-scope-hoist --no-optimize --no-source-maps src/demo/index.html"
+    "build": "parcel build --no-scope-hoist --no-optimize --no-source-maps src/demo/index.html",
+    "serve": "python3 -m http.server --directory dist"
   }
 }
